--- a/angular-web-app/src/app/components/_pages/contact/contact.component.html
+++ b/angular-web-app/src/app/components/_pages/contact/contact.component.html
@@ -39,7 +39,7 @@
           <app-contact-card></app-contact-card>
         </div>
         <div class="col-md-6">
-          <app-maps></app-maps>
+          <app-maps [title]="'Pay a visit'" [subtitle]="'Find us here.'" [location]="'Oeverlanden+60,+9606+RR+Kropswolde'"></app-maps>
         </div>
       </div>
     </div>
