--- a/angular-web-app/src/app/components/gallery/gallery.component.html
+++ b/angular-web-app/src/app/components/gallery/gallery.component.html
@@ -1,9 +1,10 @@
-<div class="row">
+<!-- Filters -->
+<div id="filterRow" class="row">
   <div class="col-xl-10 col-lg-10 col-md-10 col-sm-9 col-9">
     <div class="container">
       <div appClickOutside (clickOutside)="closeExpansionPanels()" class="row">
         <div class="col-lg-4 col-md-6 col-sm-12 p-0">
-          <mat-expansion-panel class="bg-light mat-elevation-z4 mb-2 mr-2">
+          <mat-expansion-panel class="bg-light mat-elevation-z4 mr-3">
             <mat-expansion-panel-header>
               <mat-panel-title>
                 <mat-icon class="mr-2">category</mat-icon>
@@ -33,7 +34,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12 p-0">
-          <mat-expansion-panel class="bg-light mat-elevation-z4 mb-2 mr-2">
+          <mat-expansion-panel class="bg-light mat-elevation-z4 mr-3">
             <mat-expansion-panel-header>
               <mat-panel-title>
                 <mat-icon class="mr-2">brush</mat-icon>
@@ -63,7 +64,7 @@
         </div>
 
         <div class="col-lg-4 col-md-6 col-sm-12 p-0">
-          <mat-expansion-panel class="bg-light mat-elevation-z4 mb-2 mr-2">
+          <mat-expansion-panel class="bg-light mat-elevation-z4 mr-3">
             <mat-expansion-panel-header>
               <mat-panel-title>
                 <mat-icon class="mr-2">local_offer</mat-icon>
