--- a/angular-web-app/src/app/components/news-card/news-card.component.html
+++ b/angular-web-app/src/app/components/news-card/news-card.component.html
@@ -1,49 +1,35 @@
-<mat-card class="card-clean px-0">
+<mat-card class="mb-3">
   <div class="container-fluid px-0">
     <div class="row">
       <div [class]="colOne">
         <div class="news-header">
-          <img
-            [class]="imageClass"
-            class="w-100 rounded mat-elevation-z4"
-            src="{{ newsItem.image }}"
-            alt="news"
-          />
+          <img [class]="imageClass" class="w-100 rounded mat-elevation-z4" src="{{ newsItem.image }}" alt="news" />
         </div>
       </div>
       <div [class]="colTwo">
-        <div class="d-flex flex-column justify-content-center h-100">
-          <h6 class="txt-primary text-uppercase mt-2">
-            {{ newsItem.category }}
-          </h6>
-          <h3>{{ newsItem.title }}</h3>
+        <h6 class="txt-primary text-uppercase mt-2">
+          {{ newsItem.category }}
+        </h6>
+        <h3>{{ newsItem.title }}</h3>
 
-          <div class="txt-dark-muted">
-            <hr>
-            <mat-icon class="inline-icon mr-2">today</mat-icon>
-            <span>{{ formattedDate }}</span>
-            <span class="px-2">|</span>
-            <mat-icon class="inline-icon mr-2">person</mat-icon>
-            <span>{{ newsItem.author }}</span>
-            <span class="px-2">|</span>
-            <mat-icon class="inline-icon mr-2">local_offer</mat-icon>
-            <span>{{ newsItem.category }}</span>
-            <hr>
-          </div>
-
-          <p>{{ newsItem.text }}</p>
-
-          <p>
-            <button
-              mat-raised-button
-              color="accent"
-              class="rounded-pill"
-              (click)="openNewsItem(content)"
-            >
-              Read more
-            </button>
-          </p>
+        <div class="txt-dark-muted">
+          <hr class="hr-news">
+          <mat-icon class="inline-icon mr-2">today</mat-icon>
+          <span>{{ formattedDate }}</span>
+          <span class="px-2">|</span>
+          <mat-icon class="inline-icon mr-2">person</mat-icon>
+          <span>{{ newsItem.author }}</span>
+          <span class="px-2">|</span>
+          <mat-icon class="inline-icon mr-2">local_offer</mat-icon>
+          <span>{{ newsItem.category }}</span>
+          <hr class="hr-news">
         </div>
+
+        <p>{{ newsItem.text }}</p>
+
+        <button mat-raised-button color="accent" class="rounded-pill" (click)="openNewsItem(content)">
+          Read more
+        </button>
       </div>
     </div>
   </div>
@@ -63,11 +49,7 @@
       <div class="row">
         <div class="col-md-3">
           <div class="news-header">
-            <img
-              class="w-100 rounded mat-elevation-z4"
-              src="{{ newsItem.image }}"
-              alt="news"
-            />
+            <img class="w-100 rounded mat-elevation-z4" src="{{ newsItem.image }}" alt="news" />
           </div>
         </div>
         <div class="col-md-89">
@@ -77,7 +59,7 @@
             </h6>
             <h3>{{ newsItem.title }}</h3>
             <div class="txt-dark-muted">
-              <hr>
+              <hr class="hr-news">
               <mat-icon class="inline-icon mr-2">today</mat-icon>
               <span>{{ formattedDate }}</span>
               <span class="px-2">|</span>
@@ -86,7 +68,7 @@
               <span class="px-2">|</span>
               <mat-icon class="inline-icon mr-2">local_offer</mat-icon>
               <span>{{ newsItem.category }}</span>
-              <hr>
+              <hr class="hr-news">
             </div>
           </div>
         </div>
@@ -98,7 +80,8 @@
           <p>{{ newsItem.text }}</p>
         </div>
         <div class="col-md-6">
-          <app-maps [title]="'Location'" [subtitle]="'The event will be here.'" [location]="'Oeverlanden+60,+9606+RR+Kropswolde'"></app-maps>
+          <app-maps [title]="'Location'" [subtitle]="'The event will be here.'"
+            [location]="'Oeverlanden+60,+9606+RR+Kropswolde'"></app-maps>
         </div>
       </div>
     </div>
