--- a/angular-web-app/src/app/components/news-card/news-card.component.scss
+++ b/angular-web-app/src/app/components/news-card/news-card.component.scss
@@ -1,3 +1,8 @@
 .img-news-small {
     max-height: 150px;
 }
+
+.hr-news {
+    margin-top: 0.5rem !important;
+    margin-bottom: 0.5rem !important;
+}
