--- a/angular-web-app/src/app/components/_pages/contact/contact.component.html
+++ b/angular-web-app/src/app/components/_pages/contact/contact.component.html
@@ -7,7 +7,7 @@
   <section class="page-section bg-light">
     <div class="container">
       <app-section-title
-        [title]="'Contact'"
+        [title]="'Contact info'"
         [subTitle]="'How to reach me'"
       ></app-section-title>
 
@@ -35,12 +35,12 @@
       ></app-section-title>
 
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-12">
           <app-contact-card></app-contact-card>
         </div>
-        <div class="col-md-6">
+        <!-- <div class="col-md-6">
           <app-maps [title]="'Pay a visit'" [subtitle]="'Find us here.'" [location]="'Oeverlanden+60,+9606+RR+Kropswolde'"></app-maps>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
