--- a/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
+++ b/angular-web-app/src/app/components/_pages/painting-detail/painting-detail.component.html
@@ -1,23 +1,15 @@
 <!-- Painting -->
 <div *ngIf="painting">
   <!-- Header small -->
-  <app-header
-    [title]="painting.title"
-    [subTitle]="subTitle"
-    [small]="true"
-    [image]="painting.thumbnail"
-  ></app-header>
+  <app-header [title]="painting.title" [subTitle]="subTitle" [small]="true" [image]="painting.thumbnail"></app-header>
 
   <!-- Main -->
   <main class="main main-raised">
     <!-- Content -->
     <section class="page-section bg-light">
       <div class="container">
-        <app-section-title
-          [title]="painting.title"
-          [subTitle]="'Details of painting'"
-          [text]="'By ' + painting.artist + '.'"
-        ></app-section-title>
+        <app-section-title [title]="painting.title" [subTitle]="'Details of painting'"
+          [text]="'By ' + painting.artist + '.'"></app-section-title>
 
         <div class="row mb-5">
           <div class="col-12">
@@ -35,43 +27,57 @@
               <mat-card-content>
                 <h2 class="title-underlined">Details</h2>
 
-                <mat-accordion>
+                <mat-accordion multi="true">
                   <mat-expansion-panel class="mat-elevation-z1">
                     <mat-expansion-panel-header>
                       <mat-panel-title class="txt-secondary">
-                        <span class="w-100">Artist</span>
+                        <mat-icon class="mr-3">person</mat-icon>
+                        Artist
                       </mat-panel-title>
                     </mat-expansion-panel-header>
-                    <p>{{ painting.artist }}</p>
+                    <div class="panel-content">{{ painting.artist }}</div>
                   </mat-expansion-panel>
 
-                  <mat-expansion-panel
-                    [expanded]="true"
-                    class="mat-elevation-z1"
-                  >
+                  <mat-expansion-panel [expanded]="true" class="mat-elevation-z1">
                     <mat-expansion-panel-header>
-                      <mat-panel-title>Description</mat-panel-title>
+                      <mat-panel-title>
+                        <mat-icon class="mr-3">description</mat-icon>
+                        Description
+                      </mat-panel-title>
                     </mat-expansion-panel-header>
-                    <p>{{ painting.description }}</p>
-                  </mat-expansion-panel>
-
-                  <mat-expansion-panel class="mat-elevation-z1">
-                    <mat-expansion-panel-header>
-                      <mat-panel-title>Paint & Category</mat-panel-title>
-                    </mat-expansion-panel-header>
-                    <p>{{ painting.paint }} - {{ painting.category }}</p>
+                    <div class="panel-content">{{ painting.description }}</div>
                   </mat-expansion-panel>
 
                   <mat-expansion-panel class="mat-elevation-z1">
                     <mat-expansion-panel-header>
-                      <mat-panel-title>Status & Price</mat-panel-title>
+                      <mat-panel-title>
+                        <mat-icon class="mr-3">palette</mat-icon>
+                        Paint & Category
+                      </mat-panel-title>
                     </mat-expansion-panel-header>
-                    <p>{{ painting.status }} - &euro; {{ painting.price }}</p>
+                    <div class="panel-content">
+                      <p>{{ painting.paint }}</p>
+                      <p>{{ painting.category }}</p>
+                      </div>
+                  </mat-expansion-panel>
+
+                  <mat-expansion-panel class="mat-elevation-z1">
+                    <mat-expansion-panel-header>
+                      <mat-panel-title>
+                        <mat-icon class="mr-3">more</mat-icon>
+                        Status & Price
+                      </mat-panel-title>
+                    </mat-expansion-panel-header>
+                    <div class="panel-content">
+                      <p>{{ painting.status }}</p>
+                      <p>&euro; {{ painting.price }}</p>
+                    </div>
                   </mat-expansion-panel>
                 </mat-accordion>
               </mat-card-content>
             </mat-card>
           </div>
+
         </div>
       </div>
     </section>
