--- a/angular-web-app/src/app/components/news-card/news-card.component.html
+++ b/angular-web-app/src/app/components/news-card/news-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="mb-3">
+<mat-card class="mb-3 p-5">
   <div class="container-fluid px-0">
     <div class="row">
       <div [class]="colOne">
