replaced bs modal with material modal

--- a/angular-web-app/src/app/components/_pages/news/news.component.html
+++ b/angular-web-app/src/app/components/_pages/news/news.component.html
@@ -18,6 +18,7 @@
       <div class="row">
         <div class="col-12" *ngFor="let item of newsItems">
           <app-news-card [newsItem]="item"></app-news-card>
+          <div class="content-spacer"></div>
         </div>
       </div>
     </div>
