--- a/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
+++ b/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
@@ -1,4 +1,3 @@
-
 <mat-card class="card-clean">
   <div class="container">
     <div class="row">
@@ -6,7 +5,14 @@
         <ngb-carousel *ngIf="images">
           <ng-template ngbSlide *ngFor="let image of images">
             <div class="d-flex flex-column align-items-center justify-content-center img-wrapper">
-              <img [src]="image" class="slider-img">
+              <!-- Image -->
+              <img [src]="image" class="slider-img mat-elevation-z4">
+              <!-- Caption -->
+              <div class="slider-img-caption p-3">
+                <button mat-fab color="primary" class="mx-2" aria-label="Show image" (click)="openImage(content, image)">
+                  <mat-icon>search</mat-icon>
+                </button>
+              </div>
             </div>
           </ng-template>
         </ngb-carousel>
@@ -16,4 +22,25 @@
 </mat-card>
 
 
+<!-- Modal -->
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <div></div>
+    <button mat-raised-button color="accent" (click)="modal.close()">
+      <mat-icon>close</mat-icon>
+    </button>
+  </div>
 
+  <div class="modal-body">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="d-flex align-items-center justify-content-center">
+            <img class="img-modal" src="{{ modalImage }}" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="modal-footer"></div>
+</ng-template>
