--- a/angular-web-app/src/app/components/carousel-img/carousel-img.component.scss
+++ b/angular-web-app/src/app/components/carousel-img/carousel-img.component.scss
@@ -7,5 +7,27 @@
 
 .slider-img {
   height: 100%;
+  border-radius: 4px;
+}
+
+.slider-img-caption {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  color: #fff;
+  border-radius: 5px;
+  // background-color: rgba($color-dark, 0.9);
+  transition: opacity 0.25s ease;
+  opacity: 0;
+}
+
+.slider-img-caption:hover {
+  opacity: 1;
 }
 
