--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -66,6 +66,18 @@ button::-moz-focus-inner {
   }
 }
 
+.cdk-overlay-container {
+  z-index: 1050 !important;
+}
+
+.app-root-absolute {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
 /*************************************/
 /**             Buttons             **/
 /*************************************/
@@ -110,7 +122,6 @@ button::-moz-focus-inner {
 /*************************************/
 
 .ngucarousel-items .item {
-  padding: 0px 28px;
   display: flex;
   align-items: center;
 }
@@ -211,6 +222,10 @@ button::-moz-focus-inner {
 }
 .linear-overlay-accent {
   background-image: linear-gradient(to bottom, rgba($color-accent, 0.9) 0%, rgba($color-accent, 0.5) 100%);
+}
+
+.content-spacer {
+  min-height: 2rem;
 }
 
 .flex-spacer {
