--- a/angular-web-app/src/app/components/painting-card/painting-card.component.html
+++ b/angular-web-app/src/app/components/painting-card/painting-card.component.html
@@ -39,17 +39,12 @@
   </div>
 </mat-card>
 
-<!-- Modal -->
-<ng-template #content let-modal>
-  <div class="modal-header">
-    <div></div>
-    <button mat-raised-button color="accent" (click)="modal.close()">
-      <mat-icon>close</mat-icon>
-    </button>
-  </div>
 
-  <div class="modal-body">
-    <div class="container">
+<!-- Modal -->
+<ng-template #content>
+
+  <mat-dialog-content>
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12">
           <div class="d-flex align-items-center justify-content-center">
@@ -58,6 +53,10 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="modal-footer"></div>
+  </mat-dialog-content>
+
+  <mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close cdkFocusInitial>Close</button>
+  </mat-dialog-actions>
+
 </ng-template>
