removed ngu carousel dependency

--- a/angular-web-app/src/app/components/_pages/home/home.component.html
+++ b/angular-web-app/src/app/components/_pages/home/home.component.html
@@ -5,18 +5,11 @@
   <!-- Services -->
   <section class="page-section bg-light">
     <div class="container">
-      <app-section-title
-        [title]="'Services'"
-        [subTitle]="'What i do'"
-        [text]="
+      <app-section-title [title]="'Services'" [subTitle]="'What i do'" [text]="
           'Phasellus ultricies, nisi vitae rutrum hendrerit, justo nunc faucibus libero, vel suscipit nibh erat id arcu. Cras ac vehicula diam.'
-        "
-      ></app-section-title>
+        "></app-section-title>
       <div class="row">
-        <div
-          *ngFor="let service of services"
-          class="col-lg-4 col-md-6 col-sm-12"
-        >
+        <div *ngFor="let service of services" class="col-lg-4 col-md-6 col-sm-12">
           <!-- Service cards -->
           <app-service-card [service]="service"></app-service-card>
         </div>
@@ -27,24 +20,22 @@
   <!-- Featured -->
   <section class="page-section">
     <div class="container">
-      <app-section-title
-        [title]="'Featured'"
-        [subTitle]="'My personal favorite'"
-      ></app-section-title>
+      <app-section-title [title]="'Featured'" [subTitle]="'My personal favorite'"></app-section-title>
     </div>
     <div class="container">
-      <app-featured [painting]="featuredPainting"></app-featured>
+      <div class="row">
+        <div class="col-12">
+          <!-- <app-featured [painting]="featuredPainting"></app-featured> -->
+          <app-painting-card [painting]="featuredPainting" [maxHeight]="'60vh'"></app-painting-card>
+        </div>
+      </div>
     </div>
   </section>
 
   <!-- Latest News -->
   <section class="page-section bg-light">
     <div class="container">
-      <app-section-title
-        [title]="'Latest News'"
-        [subTitle]="'Stay up to date'"
-        [link]="'/news'"
-      ></app-section-title>
+      <app-section-title [title]="'Latest News'" [subTitle]="'Stay up to date'" [link]="'/news'"></app-section-title>
       <div class="row">
         <div class="col-12">
           <app-latest-news></app-latest-news>
@@ -56,11 +47,8 @@
   <!-- Latest paintings -->
   <section class="page-section">
     <div class="container">
-      <app-section-title
-        [title]="'Recent work'"
-        [subTitle]="'Take a look at my recent work'"
-        [link]="'/portfolio'"
-      ></app-section-title>
+      <app-section-title [title]="'Recent work'" [subTitle]="'Take a look at my recent work'" [link]="'/portfolio'">
+      </app-section-title>
       <div class="row">
         <div class="col-12">
           <app-latest></app-latest>
