--- a/angular-web-app/src/app/components/maps/maps.component.html
+++ b/angular-web-app/src/app/components/maps/maps.component.html
@@ -1,6 +1,6 @@
 <!-- Card-->
-<mat-card class="mat-elevation-z4 p-5">
-  <div class="container">
+<mat-card class="mat-elevation-z4">
+  <div class="container-fluid">
     <div class="row">
       <div class="col-12">
         <h3 class="title-underlined">{{title}}</h3>
