--- a/angular-web-app/src/app/components/news-card/news-card.component.html
+++ b/angular-web-app/src/app/components/news-card/news-card.component.html
@@ -1,5 +1,5 @@
-<mat-card class="card-clean">
-  <div class="container-fluid px-0">
+<mat-card class="mat-elevation-z4">
+  <div class="container-fluid">
     <div class="row">
       <div [class]="colOne">
         <div class="news-header">
@@ -68,13 +68,12 @@
       </div>
 
       <div class="row mt-5">
-        <div class="col-md-6">
-          <p>{{ newsItem.text }}</p>
+        <div class="col-md-8">
           <p>{{ newsItem.text }}</p>
           <p>{{ newsItem.text }}</p>
           <p>{{ newsItem.text }}</p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-4">
           <app-maps [title]="'Location'" [subtitle]="'The event will be here.'"
             [location]="'Oeverlanden+60,+9606+RR+Kropswolde'"></app-maps>
         </div>
