--- a/angular-web-app/src/app/components/service-card/service-card.component.html
+++ b/angular-web-app/src/app/components/service-card/service-card.component.html
@@ -1,5 +1,5 @@
 <!-- Card-->
-<mat-card class="py-4 mb-4 gradient-secondary txt-light mat-elevation-z4">
+<mat-card class="mb-4 gradient-secondary txt-light mat-elevation-z4">
   <mat-card-content>
     <div class="text-center">
       <mat-icon class="icon-big mb-2">{{service.icon}}</mat-icon>
