--- a/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
+++ b/angular-web-app/src/app/components/carousel-img/carousel-img.component.html
@@ -1,5 +1,5 @@
 <mat-card class="card-clean">
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
       <div class="col-12">
         <ngb-carousel *ngIf="images">
