--- a/angular-web-app/src/app/components/contact-card/contact-card.component.html
+++ b/angular-web-app/src/app/components/contact-card/contact-card.component.html
@@ -1,32 +1,14 @@
 <!-- Card-->
-<mat-card class="mat-elevation-z4 p-5">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h3 class="title-underlined">Leave a message</h3>
-        <p class="txt-dark-muted">You can send us a message by completing the below form.</p>
-      </div>
-    </div>
+<mat-card class="mat-elevation-z4">
+  <div class="container-fluid">
     <div class="row">
       <div class="col-12">
         <div [hidden]="submitted" class="w-100">
           <form (ngSubmit)="onSubmit()" #contactForm="ngForm">
             <div class="form-group">
-              <mat-form-field
-                appearance="{{ appearance }}"
-                color="accent"
-                class="w-100"
-              >
+              <mat-form-field appearance="{{ appearance }}" color="accent" class="w-100">
                 <mat-label>Name</mat-label>
-                <input
-                  matInput
-                  type="text"
-                  [(ngModel)]="model.name"
-                  name="name"
-                  id="name"
-                  #name="ngModel"
-                  required
-                />
+                <input matInput type="text" [(ngModel)]="model.name" name="name" id="name" #name="ngModel" required />
                 <mat-error *ngIf="name.valid || name.pristine">
                   Name is <strong>required</strong>
                 </mat-error>
@@ -34,22 +16,10 @@
             </div>
 
             <div class="form-group">
-              <mat-form-field
-                appearance="{{ appearance }}"
-                color="accent"
-                class="w-100"
-              >
+              <mat-form-field appearance="{{ appearance }}" color="accent" class="w-100">
                 <mat-label>Email</mat-label>
-                <input
-                  matInput
-                  type="email"
-                  placeholder="info@example.com"
-                  [(ngModel)]="model.email"
-                  name="email"
-                  id="email"
-                  #email="ngModel"
-                  required
-                />
+                <input matInput type="email" placeholder="info@example.com" [(ngModel)]="model.email" name="email"
+                  id="email" #email="ngModel" required />
                 <mat-error *ngIf="email.valid || email.pristine">
                   Email is <strong>required</strong>
                 </mat-error>
@@ -57,24 +27,10 @@
             </div>
 
             <div class="form-group">
-              <mat-form-field
-                appearance="{{ appearance }}"
-                color="accent"
-                class="w-100"
-              >
+              <mat-form-field appearance="{{ appearance }}" color="accent" class="w-100">
                 <mat-label>Subject</mat-label>
-                <mat-select
-                  [(ngModel)]="model.subject"
-                  name="subject"
-                  id="subject"
-                  #subject="ngModel"
-                  required
-                >
-                  <mat-option
-                    *ngFor="let subject of subjects"
-                    [value]="subject"
-                    >{{ subject }}</mat-option
-                  >
+                <mat-select [(ngModel)]="model.subject" name="subject" id="subject" #subject="ngModel" required>
+                  <mat-option *ngFor="let subject of subjects" [value]="subject">{{ subject }}</mat-option>
                 </mat-select>
                 <mat-error *ngIf="subject.valid || subject.pristine">
                   Subject is <strong>required</strong>
@@ -83,56 +39,29 @@
             </div>
 
             <div class="form-group">
-              <mat-form-field
-                appearance="{{ appearance }}"
-                color="accent"
-                class="w-100"
-              >
+              <mat-form-field appearance="{{ appearance }}" color="accent" class="w-100">
                 <mat-label>Message</mat-label>
-                <textarea
-                  matInput
-                  [(ngModel)]="model.text"
-                  name="text"
-                  id="text"
-                  #text="ngModel"
-                  required
-                ></textarea>
+                <textarea matInput [(ngModel)]="model.text" name="text" id="text" #text="ngModel" required></textarea>
                 <mat-error *ngIf="text.valid || text.pristine">
                   Message is <strong>required</strong>
                 </mat-error>
               </mat-form-field>
             </div>
 
-            <button
-              mat-raised-button
-              color="accent"
-              type="submit"
-              class="mr-3"
-              [disabled]="!contactForm.form.valid"
-            >
+            <button mat-raised-button color="accent" type="submit" class="mr-3" [disabled]="!contactForm.form.valid">
               Submit
             </button>
-
-            <button
-              mat-raised-button
-              color="primary"
-              type="button"
-              (click)="resetForm(); contactForm.reset()"
-            >
+            <button mat-raised-button color="primary" type="button" (click)="resetForm(); contactForm.reset()">
               Clear
             </button>
+
           </form>
         </div>
 
         <!-- Submitted -->
         <div [hidden]="!submitted">
           <p>Thanks for your message.</p>
-          <button
-            mat-raised-button
-            color="accent"
-            type="button"
-            (click)="submitted = false"
-          >
+          <button mat-raised-button color="accent" type="button" (click)="submitted = false">
             Edit
           </button>
         </div>
