--- a/angular-web-app/src/app/components/latest/latest.component.html
+++ b/angular-web-app/src/app/components/latest/latest.component.html
@@ -1,12 +1,12 @@
-<mat-tab-group>
-  <mat-tab *ngFor="let paintingGroup of groupedPaintings" label="Group">
+<ngb-carousel *ngIf="groupedPaintings" #latestCarousel>
+  <ng-template ngbSlide *ngFor="let paintingGroup of groupedPaintings">
     <div class="container-fluid">
       <div class="row">
-        <div *ngFor="let painting of paintingGroup" class="col-4">
-          <app-painting-card [painting]="painting" [fixedHeight]="true">
+        <div *ngFor="let painting of paintingGroup" class="col-sm-12 col-md-6 col-lg-4">
+          <app-painting-card [painting]="painting" [maxHeight]="'30vh'">
           </app-painting-card>
         </div>
       </div>
     </div>
-  </mat-tab>
-</mat-tab-group>
+  </ng-template>
+</ngb-carousel>
