--- a/angular-web-app/src/app/components/painting-card/painting-card.component.html
+++ b/angular-web-app/src/app/components/painting-card/painting-card.component.html
@@ -1,13 +1,6 @@
-<mat-card
-  [class.painting-card-auto-height]="!fixedHeight"
-  class="painting-card p-0 mat-elevation-z4"
->
+<mat-card [ngStyle]="{'max-height': maxHeight}" class="painting-card p-0 mat-elevation-z4">
   <!-- Image -->
-  <img
-    class ="painting-card-img"
-    src="{{ painting.thumbnail }}"
-    alt=""
-  />
+  <img class="painting-card-img" src="{{ painting.thumbnail }}" alt="" />
 
   <!-- Caption -->
   <div class="painting-card-caption p-3">
@@ -17,22 +10,10 @@
     </div>
 
     <div class="painting-card-buttons">
-      <button
-        mat-fab
-        color="accent"
-        class="mx-2"
-        aria-label="Show image"
-        (click)="openImage(content)"
-      >
+      <button mat-fab color="accent" class="mx-2" aria-label="Show image" (click)="openImage(content)">
         <mat-icon>search</mat-icon>
       </button>
-      <button
-        mat-fab
-        color="accent"
-        class="mx-2"
-        aria-label="Show details"
-        (click)="goToPaintingDetails(painting.id)"
-      >
+      <button mat-fab color="accent" class="mx-2" aria-label="Show details" (click)="goToPaintingDetails(painting.id)">
         <mat-icon>more_horiz</mat-icon>
       </button>
     </div>
