--- a/angular-web-app/src/styles.scss
+++ b/angular-web-app/src/styles.scss
@@ -87,6 +87,10 @@ button::-moz-focus-inner {
 /**             Cards               **/
 /*************************************/
 
+mat-card {
+  padding: 2rem !important;
+}
+
 .card-clean {
   box-shadow: none !important;
   background-color: transparent;
@@ -121,57 +125,10 @@ button::-moz-focus-inner {
 /**             Carousel            **/
 /*************************************/
 
-.ngucarousel-items .item {
-  display: flex;
-  align-items: center;
+.carousel-inner {
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
-
-.leftRs {
-  position: absolute !important;
-  margin: auto !important;
-  top: 0 !important;
-  bottom: 0 !important;
-  left: 0 !important;
-  background-color: $color-secondary !important;
-}
-
-.rightRs {
-  position: absolute !important;
-  margin: auto !important;
-  top: 0 !important;
-  bottom: 0 !important;
-  right: 0 !important;
-  background-color: $color-secondary !important;
-}
-
-
-.ngu-points {
-  list-style-type: none;
-  text-align: center;
-  padding: 12px;
-  margin: 0;
-  white-space: nowrap;
-  overflow: auto;
-  box-sizing: border-box;
-}
-
-.ngu-points  li {
-  display: inline-block;
-  border-radius: 50%;
-  background: $color-dark;
-  padding: 5px;
-  margin: 0 4px;
-  transition-timing-function: cubic-bezier(.17,.67,.83,.67);
-  transition: .4s;
-  cursor: pointer;
-}
-.ngu-points  li.active {
-  box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
-  -webkit-transform: scale(1.7);
-  transform: scale(1.7);
-}
-
-// Bootstrap carousel
 .carousel-control-prev {
   justify-content: flex-start;
 }
