--- a/angular-web-app/src/app/components/news-card/news-card.component.html
+++ b/angular-web-app/src/app/components/news-card/news-card.component.html
@@ -68,15 +68,15 @@
       </div>
 
       <div class="row mt-5">
-        <div class="col-md-8">
+        <div class="col-12">
           <p>{{ newsItem.text }}</p>
           <p>{{ newsItem.text }}</p>
           <p>{{ newsItem.text }}</p>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <app-maps [title]="'Location'" [subtitle]="'The event will be here.'"
             [location]="'Oeverlanden+60,+9606+RR+Kropswolde'"></app-maps>
-        </div>
+        </div> -->
       </div>
     </div>
   </mat-dialog-content>
