--- a/angular-web-app/src/app/components/news-card/news-card.component.scss
+++ b/angular-web-app/src/app/components/news-card/news-card.component.scss
@@ -1,3 +1,10 @@
+.news-header {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .img-news-small {
     max-height: 150px;
 }
