--- a/angular-web-app/src/app/components/painting-card/painting-card.component.html
+++ b/angular-web-app/src/app/components/painting-card/painting-card.component.html
@@ -1,4 +1,4 @@
-<mat-card [ngStyle]="{'max-height': maxHeight}" class="painting-card p-0 mat-elevation-z4">
+<mat-card [ngStyle]="{'max-height': maxHeight}" class="painting-card p-0">
   <!-- Image -->
   <img class="painting-card-img" src="{{ painting.thumbnail }}" alt="" />
 
