--- a/angular-web-app/src/app/components/maps/maps.component.html
+++ b/angular-web-app/src/app/components/maps/maps.component.html
@@ -1,5 +1,5 @@
 <!-- Card-->
-<mat-card class="mat-elevation-z4">
+<mat-card>
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
