--- a/angular-web-app/src/app/components/news-card/news-card.component.html
+++ b/angular-web-app/src/app/components/news-card/news-card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="mat-elevation-z4">
+<mat-card>
   <div class="container-fluid">
     <div class="row">
       <div [class]="colOne">
